# BUAA-OJ-Project

./: 10 零崎的人间冒险Ⅱ.c  100 零崎的朋友很多Ⅰ.c  101 零崎的朋友很多Ⅱ.c  102 零崎的朋友很多Ⅲ.c  1026 向量内积.c  105 最优二叉搜索树.c  1057 弱化高精度减法.c  1059 选择排列.c  1064 Bamboo和Coco.c  1068 双阶乘.c  1069 最小周长.c  108 A plus plus B.cpp  1080 ruaaa.c  1083 中等·AlvinZH的青春记忆I.c  1084 中等·AlvinZH的青春记忆II.c  1086 难题·AlvinZH的青春记忆IV.c  11 Let's play a game.c  11 Let's play a game递归.c  110 亚顿的幻方.c  111 圆有点挤.c  112 数字填充.c  113 超市排队.cpp  114 盗墓笔记之鬼玺.c  117 汉诺塔再度来袭.c  12 零崎的人间冒险Ⅲ.c  120 卡拉传递.c  121 相位转移.cpp  121 相位转移bound.cpp  121 相位转移bsearch.c  122 DP大作战——多重背包.c  123 DP大作战—组合背包.c  124 DP大作战—状态压缩dp.c  126 String Matching.c  127 JosephusWithArrays.c  129 2 Char Magazine.c  130 Magry遇上了初雪第二弹.c  131 条形统计图.cpp  132 胡乱走的和尚.c  133 蛇形填数.c  1332 十进制异或 数位dp.c  (+683 more)
1001~2000/: 1010 yk的美食计划 加以限制的最大子矩阵和 二维前缀和.c  1017 Eva 的等边三角形 计算几何 数学.c  1025 Statistics.c  1027 孤独的数.c  1028 数组漂移.c  1029 字符串旋转.c  1030 统计质数 埃式筛法.c  1030 统计质数 线性筛.c  1030 统计质数 高度优化的埃氏筛法.c  1033 蛇形矩阵.c  1034 马鞍数.c  1035 约瑟夫问题.c  1036 子序列.c  1037 韩信点兵 中国剩余定理.c  1037 韩信点兵.c  1038 狐狸捉兔子.c  1040 回文串判断.c  1041 计算行列式的值.c  1042 角谷定理（伪） 随机数.c  1042 角谷定理（伪）.c  1044 粒子加速.c  1045 成绩统计.c  1055 十进制转二进制.c  1056 数字三角形.c  1058 重排字符串.c  1059 选择排列.c  1066 ModricWang的水系法术.c  1067 超简单表达式计算.c  1070 Parallel Sort(伪).c  1071 debug 字符串处理.c  1072 动了手脚的Fibonacci 斐波那契数列.c  1073 Hanoi Again.c  1074 rua.c  1075 ruaa.c  1076 ruaaaa KMP.c  1077 ruaaaaaaa.c  1079 ruaaaaa.c  1080 ruaaa.c  1085 难题·AlvinZH的青春记忆III 匈牙利.c  1085 难题·AlvinZH的青春记忆III.c  (+120 more)
1~1000/: 1 test a+b.c  10 零崎的人间冒险Ⅱ.c  100 零崎的朋友很多Ⅰ.c  101 零崎的朋友很多Ⅱ.c  102 零崎的朋友很多Ⅲ.c  103 双“11”的抉择.c  104 吃土.c  105 最优二叉搜索树.c  106 jhljx瞬间爆炸(I).c  107 jhljx瞬间爆炸().c  109 可爱的数.cpp  11 Let's play a game威佐夫博弈根号5.c  110 亚顿的幻方.c  111 圆有点挤.c  115 The Super N.c  116 jhljx学斐波那契数列(I).c  117 汉诺塔再度来袭.c  118 又是一道水水的数学题= =.c  119 下楼梯的和尚.c  120 卡拉传递.c  120 路径压缩维护并查集.c  122 DP大作战——多重背包.c  123 DP大作战—组合背包.c  124 DP大作战—状态压缩dp.c  126 String Matching.c  129 2 Char Magazine.c  131 条形统计图.cpp  132 胡乱走的和尚.c  133 蛇形填数.c  134 Chem Is A Third Try!!.c  135 老和尚的真言.c  136 满天繁星.cpp  137 NeXT.c  138 Water.c  139 Easy Triangle.c  14 Inverse number：Reborn归并排序求逆序对.c  141 microhhh的回城.c  142 大家一起数钢镚.c  143 机智零崎不会没梗Ⅰ.c  144 出口胡萝卜.c  (+521 more)
2001~3000/: 2165 维修数列 链表.c  2193 题目F交作业计划.c  2218 题目N涂鸦.c  2219 题目O合理分配.c  2227 题目P轰炸坦克.c  2228 题目Q合数分解.c  2355 完全图生成树特殊.c  2356 位运算.c  2368 二叉搜索树的和值 VEB树 map.cpp  2368 二叉搜索树的和值 手写红黑树.c  2368 二叉搜索树的和值 手写红黑树.cpp  2368 二叉搜索树的和值 深度 笛卡尔树.c  2368 二叉搜索树的和值 链表预处理.c  2368 二叉树深度和笛卡尔树.c  2369 电影院.cpp  2370 连续子序列的权值单调栈.c  2371 Zexal的拯救世界 并查集.c  2371 黑暗光明并查集.c  2372 卡塔兰数.c  2374 多多岛.c  2376 魔法阵弗洛伊德.c  2425 竞赛相邻分数消失.c  2428 a+b demo示例.c  2431 十进制转三进制.c  2436 差分.c  2437 递归.c  2438 分治.c  2439 斐波那契数列.c  2485 逆序数.c  2486 k次折半和最小.c  2487 pair语法正确.c  2489 点灯线段树.c  2491 过河递推.c  2530 长k子序列最小差之和.c  2531 与非门树形DP.c  2532 钢管切割.c  2541 01背包.c  2542 完全背包.c  2543 多重背包队列法.c  2544 组合背包.c  (+38 more)
3001~4000/: 3001 老铁666.c  3002 艾可雪戴口罩.c  3003 宅家期间的黑暗料理.c  3004 雪萌萌的围棋 dfs求连通块.c  3005 疫情数据统计.c  3006 口罩运输.c  3007 怎么会有那么多病毒.c  3008 统计康复者.c  3012 二极管 数学结论.c  3014 奇怪的排序 序列操作 Splay set.cpp  3014 奇怪的排序 数组思维操作.c  3025 新同学.c  3027 Easy LCM Problem.c  3028 简单成绩统计.c  3029 符号函数.c  3031 看日出.c  3327 谁是19王 n错排问题.c  3333 monotonicity 尺取法.c  3335 检测数码管.c  3338 复习位运算.c  3339 填报高考志愿.c  3340 爬爬爬 哈希记忆化 最长无重复子串.c  3341 数字点读机 字符串模拟.c  3346 djj的异或序列 异或前缀和.c  3353 午间 差分.c  3358 网瘾少年CTY.c  3359 jqe的数列.c  3364 遥不可及的军训 贪心.c
4001~5000/: 4120 （中等题）W形串.c  4167 Nero's Key Board.c  4169 Weidong's minimum working hours 二分答案.c  4171 Optimization on matrices multiplication 矩阵链乘.c  4173 Minimal edit distance to a string's prefix dp 编辑距离.c  4182 返航小统计（数组）.c  4183 女神的生日.c  4184 YourSQL2.0.c  4185 数列级数（循环）.c  4185 数列级数（打表）.c  4189 阿瓦隆卡牌.c  4191 helloworld.c  4194 PHP 是最好的语言.c  4195 cbj学数学分析.c  4196 刀客塔的烦恼.c  4197 单节得分王.c  4198 基础物理实验 2.c  4198 基础物理实验 2（简单版）（暴力） .c  4199 二进制逆序.c  4202 女神的密码2.c  4203 奇妙的多边形.c  4206 女神的考验.c  4212 找数字 方法1.c  4212 找数字 方法2.c  4214 ZJD学GCD.c  4215 漏沙漏.c  4216 简单的分数约分.c  4217 简单方程.c  4223 High Heels！.c  4225 小兔子乖乖拔萝卜.c  4227 小迷弟坐电梯.c  4230 数字反转2021 方法2.c  4234 小迷弟的反向最大公约数.c  4235 水君的价格.c  4238 小迷弟帮室友追女神.c  4239 朵朵选靓号.c  4240 小迷弟的灵光一现.c  4241 小迷弟的碎碎念.c  4242 ZYT学“真·位运算.c  4244 CRC16.c  (+115 more)
FFT-complex/: 1134 简单ab complex.c  1415 石头剪子布 FFT 模式串匹配 complex.c  1415 石头剪子布.c  240 FFT教你做乘法 complex.c  401 巨坑的(AB)%p (有毒慎入) by ModricWang complex.c  41 大整数相乘 complex.c  4254 cbj学进制转换 complex.c  4254 cbj学进制转换.cpp  629 模式寻数 II complex.c  README.md
bitset/: 1030 统计质数 Min25筛.cpp  1030 统计质数 洲阁筛.cpp  4328 ning的汉明距离.cpp  README.md
bound-bsearch/: 121 相位转移.cpp  121 相位转移bsearch.c  204 就是这么巧.cpp  204 就是这么巧bsearch.c  3333 monotonicity 最短满足和的连续子序列.cpp  3339 填报高考志愿 排序 下界二分查找.c  4289 小迷弟磕cpbsearch.c  4335 惹Shy的二分查找bsearch.c  4419 k-排列 方法2.c  529 大家一起来排队.cpp  564 王助教的调色盘.cpp  759 Gzh的射击游戏.cpp  819 【2017集训选拔赛】Rectangle Recognition 稀疏线和稠密线分类处理.cpp  README.md
deque/: 314 毛毛虫.cpp  388 中等-王po买瓜.cpp  README.md
floyd/: 187 就决定是你了！.c  2376 魔法阵弗洛伊德.c  2741 图图 floyd.c  384 中等题-图的直径.c  52 零崎的补番计划Ⅲ 模板 有向图Floyd最短路径.c  538 混乱的辈分关系 图论 sort.cpp  825 ModricWang的星际旅行（中难）.c  README.md
kruskal/: 344 拮据的模拟城市.c  355 最小生成树 非严格次小生成树 LCA.c  355 最小生成树.c  360 AZY's ink.c  362 AZY's toys.c  363 无线网络.c  382 中世界的Thor 倍增LCA+非严格次小生成树.c  382 中世界的Thor.c  784 ModricWang的布线问题.c  787 DH的礼物.c  828 ModricWang的小火球术（简单）.c  README.md
map/: 1120 夜晚的街区（数据加强）unordered_map.cpp  1234 学生信息unordered_map.cpp  2980 14. 超市收银系统.cpp  379 中等题-不同数字的个数 离线+树状数组.cpp  3951 （中等题）血战双十一unordered_map.cpp  3963 （中等题）礼物的价值 模拟 unordered_map.cpp  4164 Who hasn't sign up unordered_map.cpp  516 ModricWang的星灵棋 状态压缩bfs unordered_map.cpp  770 DH的邮件系统.cpp  814 DH去看球.cpp  941 夜晚的街区 图论 维护后缀unordered_map.cpp  README.md
nth_element/: 1518 第k顺序统计量.cpp  250 简单题——I wanna be the 升级者Ⅰ.cpp  40 零崎的战争 静态kd树查询最短欧氏距离.cpp  4328 ning的汉明距离 kd树.cpp  466 我有特殊的快排技巧.cpp  50 零崎的补番计划Ⅰ STL.cpp  623 NAIVE排序.cpp  98 第三小整数.cpp  README.md
others-cpp/: 1041 计算行列式的值 高斯消元swap.cpp  1066 ModricWang的水系法术 无向图最大流 HLPP预流推进 list.cpp  1066 ModricWang的水系法术 无向图最大流 ISAP.cpp  1076 ruaaaa.cpp  1078 ruaaaaaa.cpp  1085 难题·AlvinZH的青春记忆III 最大流 ISAP.cpp  1311 鸽鸽 状态机+矩阵快速幂DP.cpp  (+28 more)
(+214 files in other folders)
