cmake_minimum_required(VERSION 3.20)
project(BUAA_OJ_Project)

set(CMAKE_CXX_STANDARD 14)

include_directories(1001~2000)
include_directories(1~1000)
include_directories(2001~3000)
include_directories(3001~4000)
include_directories(4001~5000)
include_directories(bitset)
include_directories(bound-bsearch)
include_directories(FFT-complex)
include_directories(priority_queue)
include_directories(unique)

add_executable(BUAA_OJ_Project
        "1001~2000/1026 向量内积.c"
        "1001~2000/1028 数组漂移.c"
        "1001~2000/1030 统计质数 高度优化的埃氏筛法.c"
        "1001~2000/1030 统计质数 埃式筛法.c"
        "1001~2000/1030 统计质数 线性筛.c"
        "1001~2000/1057 弱化高精度减法.c"
        "1001~2000/1059 选择排列.c"
        "1001~2000/1064 Bamboo和Coco.c"
        "1001~2000/1066 ModricWang的水系法术.c"
        "1001~2000/1068 双阶乘.c"
        "1001~2000/1069 最小周长.c"
        "1001~2000/1070 Parallel Sort(伪).c"
        "1001~2000/1080 ruaaa.c"
        "1001~2000/1083 中等·AlvinZH的青春记忆I.c"
        "1001~2000/1084 中等·AlvinZH的青春记忆II.c"
        "1001~2000/1085 难题·AlvinZH的青春记忆III.c"
        "1001~2000/1085 难题·AlvinZH的青春记忆III匈牙利.c"
        "1001~2000/1086 难题·AlvinZH的青春记忆IV.c"
        "1001~2000/1301 最短路.c"
        "1001~2000/1327 玩游戏 博弈 结论.c"
        "1001~2000/1328 气泡排序 二叉堆 排序原理.c"
        "1001~2000/1332 十进制异或 数位dp.c"
        "1001~2000/1412 W型串.c"
        "1001~2000/1413 比特手链.c"
        "1001~2000/1416 芸如的入学测试.c"
        "1001~2000/1429 堆积糖果(随机化思想+二维前缀和).c"
        "1001~2000/1430 SkyLee的艾露猫.c"
        "1001~2000/1431 SkyLee在GameStop.c"
        "1001~2000/1435 Zyy学姐的纸飞机.c"
        "1001~2000/1446 ModricWang's Real QuickSort Query.c"
        "1001~2000/1450 ab-a-b.c"
        "1001~2000/1451 外心.c"
        "1001~2000/1452 ACSII.c"
        "1001~2000/1456 字母Y.c"
        "1001~2000/1458 宋老师的见面礼.c"
        "1001~2000/1459 血小板.c"
        "1001~2000/1460 Mogg捉gst.c"
        "1001~2000/1463 两整数和.c"
        "1001~2000/1466 二进制数.c"
        "1001~2000/1470 石头剪刀布.c"
        "1001~2000/1473 字符串排列.c"
        "1001~2000/1474 超大非负整数.c"
        "1001~2000/1475 字符串比较.c"
        "1001~2000/1478 Zyy学姐的生日礼物3.c"
        "1001~2000/1479 Zyy学姐的生日礼物1.c"
        "1001~2000/1482 HugeGun学姐的数列.c"
        "1001~2000/1483 求和.c"
        "1001~2000/1485 有趣的数.c"
        "1001~2000/1486 Max的最简真分数.c"
        "1001~2000/1489 绝命西二旗.c"
        "1001~2000/1491 lx买东西 数位dp 针对输入n为高精度的情况.cpp"
        "1001~2000/1491 lx买东西.c"
        "1001~2000/1492 最大子矩阵和.c"
        "1001~2000/1494 Max的排列（羊蹄）.c"
        "1001~2000/1495 负数超纲.c"
        "1001~2000/1496 假分数.c"
        "1001~2000/1497 酸奶的失真复读机.c"
        "1001~2000/1498 倒序.c"
        "1001~2000/1499 HugeGun学姐做除法.c"
        "1001~2000/1500 翻译字符.c"
        "1001~2000/1501 login做减法.c"
        "1001~2000/1502 熊大做加法.c"
        "1001~2000/1504 Hello, world!.c"
        "1001~2000/1505 请问你今天要来点可爱多吗.c"
        "1001~2000/1507 排序.c"
        "1001~2000/1508 SkyLee的图书整理.cpp"
        "1001~2000/1509 一起来学stdlib.c"
        "1001~2000/1510 Mogg射日.c"
        "1001~2000/1513 HugeGun学姐的曲线.c"
        "1001~2000/1515 Zyy学姐的生日礼物2.c"
        "1001~2000/1517 Max的代码生成器.c"
        "1001~2000/1518 第k顺序统计量.c"
        "1001~2000/1520 类型转换.c"
        "1001~2000/1539 蓝笔和黑笔.c"
        "1001~2000/1541 Mogg的矩形面积.c"
        "1001~2000/1542 lx的圆柱体.c"
        "1001~2000/1543 SkyLee的补番计划.c"
        "1001~2000/1544 HugeGun学姐的表.c"
        "1001~2000/1547 秦九韶.c"
        "1001~2000/1548 MountVoom学汇编.c"
        "1001~2000/1549 熊大的座位表.c"
        "1001~2000/1550 致Ange.c"
        "1001~2000/1551 中二之力.c"
        "1001~2000/1552 恶霸爱摸鱼.c"
        "1001~2000/1554 数制转换.c"
        "1001~2000/1555 寻找158(1).c"
        "1001~2000/1556 某天之后多少天.c"
        "1001~2000/1557 区间内素数.c"
        "1001~2000/1558 Ausar的Switch.c"
        "1001~2000/1560 lx的bitCount.c"
        "1001~2000/1566 约数函数.c"
        "1001~2000/1568 湖泊排序.c"
        "1001~2000/1569 login的GPA计算器.c"
        "1001~2000/1570 天马流星拳.c"
        "1001~2000/1572 浮点取模.c"
        "1001~2000/1573 Mogg的自恋数.c"
        "1001~2000/1574 Zyy学姐的生日礼物4.c"
        "1001~2000/1576 士谔数.c"
        "1001~2000/1577 Ange的爱心密码.c"
        "1001~2000/1580 我是魔鬼1.c"
        "1001~2000/1581 HugeGun学姐的圆.c"
        "1001~2000/1582 熊大的一 转 攻 势.c"
        "1001~2000/1583 酸奶的矩阵乘法.c"
        "1001~2000/1584 Zyy学姐的生日礼物5.c"
        "1001~2000/1585 lx的数字排序.c"
        "1001~2000/1586 HugeGun学姐疯了.c"
        "1001~2000/1587 lx买卖股票.c"
        "1001~2000/1589 悠唯的签到题.c"
        "1001~2000/1595 高速公路.c"
        "1001~2000/1597 min_26.c"
        "1001~2000/1598 这道题没有题面描述.c"
        "1001~2000/1599 等差数列.c"
        "1001~2000/1600 login不会梦到银行利息.c"
        "1001~2000/1602 HugeGun学姐的猜想.c"
        "1001~2000/1603 lx的最短正整数序列.c"
        "1001~2000/1604 酸奶织方帕.c"
        "1001~2000/1605 Max的DDL.c"
        "1001~2000/1606 m件礼物最多带多少钱.c"
        "1001~2000/1608 澪.c"
        "1001~2000/1610 平均中位从小到大众数.c"
        "1001~2000/1611 线段按端点序排序.c"
        "1001~2000/1612 n个至少n.c"
        "1001~2000/1613 字典序全排列.c"
        "1001~2000/1614 逆序数.c"
        "1001~2000/1615 euclid.c"
        "1001~2000/1619 lx放球.c"
        "1001~2000/1620 Mogg的简单数论.c"
        "1001~2000/1621 HugeGun学姐的魔法.c"
        "1001~2000/1623 RMQ问题.c"
        "1001~2000/1627 Ackermann函数.c"
        "1001~2000/1628 login走迷宫.c"
        "1001~2000/1631 格式化倒序输出.c"
        "1001~2000/1632 复读序列.c"
        "1001~2000/1633 lx的简单题.c"
        "1001~2000/1634 酸奶吃羊排.c"
        "1001~2000/1635 大水题.c"
        "1001~2000/1636 ArcheyChen的汉诺塔.c"
        "1001~2000/1637 Ausar的斐波那契数列.c"
        "1001~2000/1638 Ausar的非格式化倒序输出.c"
        "1001~2000/1640 再遇士谔数.c"
        "1001~2000/1641 凯恩·血蹄--烽火戏诸侯.c"
        "1001~2000/1647 生日蛋糕.c"
        "1001~2000/1648 进制转化.c"
        "1001~2000/1649 ArcheyChen的狼题.c"
        "1001~2000/1651 摸鱼助教Mogg Ⅱ.c"
        "1001~2000/1652 lx解方程.c"
        "1001~2000/1656 Zyy学姐的生日礼物6(正版).c"
        "1001~2000/1661 树形DP初步-二叉树.c"
        "1001~2000/1662 树形DP初步-真树.c"
        "1001~2000/1682 绝望的超时空步兵.c"
        "1001~2000/1686 多简单.c"
        "1~1000/1 test a+b.c"
        "1~1000/10 零崎的人间冒险Ⅱ.c"
        "1~1000/100 零崎的朋友很多Ⅰ.c"
        "1~1000/101 零崎的朋友很多Ⅱ.c"
        "1~1000/102 零崎的朋友很多Ⅲ.c"
        "1~1000/103 双“11”的抉择.c"
        "1~1000/104 吃土.c"
        "1~1000/105 最优二叉搜索树.c"
        "1~1000/106 jhljx瞬间爆炸(I).c"
        "1~1000/107 jhljx瞬间爆炸().c"
        "1~1000/108 A plus plus B.cpp"
        "1~1000/109 可爱的数.cpp"
        "1~1000/11 Let's play a game威佐夫博弈根号5.c"
        "1~1000/11 Let's play a game递归.c"
        "1~1000/110 亚顿的幻方.c"
        "1~1000/111 圆有点挤.c"
        "1~1000/112 数字填充.c"
        "1~1000/113 超市排队.cpp"
        "1~1000/114 盗墓笔记之鬼玺.c"
        "1~1000/115 The Super N.c"
        "1~1000/116 jhljx学斐波那契数列(I).c"
        "1~1000/117 汉诺塔再度来袭.c"
        "1~1000/118 又是一道水水的数学题= =.c"
        "1~1000/119 下楼梯的和尚.c"
        "1~1000/12 零崎的人间冒险Ⅲ.c"
        "1~1000/120 卡拉传递.c"
        "1~1000/120 路径压缩维护并查集.c"
        "1~1000/122 DP大作战——多重背包.c"
        "1~1000/123 DP大作战—组合背包.c"
        "1~1000/124 DP大作战—状态压缩dp.c"
        "1~1000/126 String Matching.c"
        "1~1000/127 JosephusWithArrays.c"
        "1~1000/129 2 Char Magazine.c"
        "1~1000/130 Magry遇上了初雪第二弹.c"
        "1~1000/131 条形统计图.cpp"
        "1~1000/132 胡乱走的和尚.c"
        "1~1000/133 蛇形填数.c"
        "1~1000/134 Chem Is A Third Try!!.c"
        "1~1000/135 老和尚的真言.c"
        "1~1000/136 满天繁星.cpp"
        "1~1000/137 NeXT.c"
        "1~1000/138 Water.c"
        "1~1000/139 Easy Triangle.c"
        "1~1000/14 Inverse number：Reborn归并排序求逆序对.c"
        "1~1000/141 microhhh的回城.c"
        "1~1000/142 大家一起数钢镚.c"
        "1~1000/143 机智零崎不会没梗Ⅰ.c"
        "1~1000/144 出口胡萝卜.c"
        "1~1000/145 忙碌的Nova君.c"
        "1~1000/147 dp AC.c"
        "1~1000/148 机智零崎不会没梗Ⅲ.c"
        "1~1000/149 jhljx找耳朵.c"
        "1~1000/15 零崎的人间冒险Ⅳ.c"
        "1~1000/152 jhljx面向对象.c"
        "1~1000/153 cool_breeze的数组.c"
        "1~1000/154 Fibonacci Again.c"
        "1~1000/155 RPG问题.c"
        "1~1000/156 说好的XihangTooWhite.c"
        "1~1000/157 marakumo.c"
        "1~1000/158 区间排序.c"
        "1~1000/159 So 2.c"
        "1~1000/160 防御塔的搭建.c"
        "1~1000/161 Lost in maze.c"
        "1~1000/162 防御塔的完善.c"
        "1~1000/163 Archaeology-Guatemala.c"
        "1~1000/164 Ryan's Life Game.c"
        "1~1000/165 电话费.c"
        "1~1000/166 大只的回文数.c"
        "1~1000/168 寻找方程的根.c"
        "1~1000/169 元素查找map.cpp"
        "1~1000/17 A+B.c"
        "1~1000/170 黑白棋I.c"
        "1~1000/171 成绩统计IIIstring.cpp"
        "1~1000/172 水水的矩阵翻转.c"
        "1~1000/175 成绩统计IIstring.cpp"
        "1~1000/176 jhljx学字符串.c"
        "1~1000/177 Taylor.c"
        "1~1000/178 jhljx走迷宫.c"
        "1~1000/179 这货不是二分unordered_map.cpp"
        "1~1000/18 快来快来帮猪脚.c"
        "1~1000/180 签到.c"
        "1~1000/181 俯瞰风景.c"
        "1~1000/182 伽蓝之洞.c"
        "1~1000/183 Ryan's Tennis.c"
        "1~1000/184 microhhh的图书管理系统.c"
        "1~1000/185 阿姆斯特朗回旋加速喷气式阿姆斯特朗炮.c"
        "1~1000/186 万恶的双“12”.c"
        "1~1000/187 就决定是你了！.c"
        "1~1000/189 零崎的悠哉日常Ⅰ.c"
        "1~1000/19 大家快来刷TD啊.c"
        "1~1000/190 零崎的悠哉日常Ⅲ.c"
        "1~1000/191 零崎的悠哉日常Ⅱ.c"
        "1~1000/192 奖学金.c"
        "1~1000/193 War差分.c"
        "1~1000/193 War并查集.c"
        "1~1000/194 Obsessive Compulsive Disorder.c"
        "1~1000/195 求n阶矩阵.c"
        "1~1000/196 比例简化.c"
        "1~1000/197 哥德巴赫猜想.c"
        "1~1000/198 偶回文串.c"
        "1~1000/199 并联变阻器.c"
        "1~1000/2 test 求余.c"
        "1~1000/20 水水哒a+b.c"
        "1~1000/200 抽奖箱 概率 超几何分布.c"
        "1~1000/201 最大公约数.c"
        "1~1000/202 矩阵.c"
        "1~1000/203 序列.c"
        "1~1000/205 高中数学题.c"
        "1~1000/206 神奇宝贝大师.c"
        "1~1000/206 神奇宝贝大师n方.c"
        "1~1000/207 Spfa版本.c"
        "1~1000/209 铅导体(和207重题).c"
        "1~1000/21 大家都来分级啦.c"
        "1~1000/210 我是鱼.c"
        "1~1000/211 危险密码 逆元+链式前向星哈希.c"
        "1~1000/212 模式.c"
        "1~1000/213 金字塔的难题 贪心sort 二分答案.c"
        "1~1000/214 大新闻 数组 连续子数组中位数.c"
        "1~1000/215 模式匹配 递归 连分数.c"
        "1~1000/218 乱六一糟的数列 贪心.cpp"
        "1~1000/22 公公偏头痛.c"
        "1~1000/220 数字填充（简单）.c"
        "1~1000/221 Statistics（中等）.cpp"
        "1~1000/222 高精度A+B.c"
        "1~1000/223 Chem is a try！（难） map string.cpp"
        "1~1000/224 Equation（简单）.c"
        "1~1000/225 Keyboard(简单).c"
        "1~1000/226 简单的质数(简单).c"
        "1~1000/227 更大公约数.c"
        "1~1000/229 尾声·织梦行云（难）.c"
        "1~1000/23 名侦探柯南之陷阱.c"
        "1~1000/230 天璇迷局（难）.c"
        "1~1000/231 Volcano（中等）.c"
        "1~1000/232 快来快来数一数（简单）.c"
        "1~1000/233 螺旋矩阵（中等）.c"
        "1~1000/234 表达式求值（中等）.c"
        "1~1000/235 求方程的根（中等）.c"
        "1~1000/236 字典序排序（简单）.c"
        "1~1000/237 microhhh的连连看（难）.c"
        "1~1000/238 捡火柴的Nova君.c"
        "1~1000/239 寻找最远点对.c"
        "1~1000/24 名侦探柯南之陷阱升级版.c"
        "1~1000/241 jhljx跑跑跑.c"
        "1~1000/242 网络传输 差分.c"
        "1~1000/242 网络传输 线段树.c"
        "1~1000/243 似乎该博弈了！.c"
        "1~1000/244 听说你会打地鼠.c"
        "1~1000/245 模式查找.c"
        "1~1000/246 MerryXmas(简单).c"
        "1~1000/247 颜色均值.c"
        "1~1000/248 microhhh的回文词（难）.c"
        "1~1000/249 Doc的梦想（难）.c"
        "1~1000/25 质数判断.c"
        "1~1000/250 简单题——I wanna be the 升级者Ⅰ nth_element.cpp"
        "1~1000/253 难题——再见了，大活 wqs二分.c"
        "1~1000/253 难题——再见了，大活 计数DP.c"
        "1~1000/254 中等题——零崎的考试 基础DP.c"
        "1~1000/256 简单题——Railway Station.c"
        "1~1000/257 简单题——我在东北玩泥巴 博弈论.c"
        "1~1000/258 中等题——伪流水线调度 贪心 任务调度.c"
        "1~1000/259 中等题——果园连连看 dfs.c"
        "1~1000/26 jhljx去太空.c"
        "1~1000/260 难题——线段和直线 计算几何.cpp"
        "1~1000/261 AZY的看图数数.c"
        "1~1000/262 SimpleCalculation.c"
        "1~1000/263 jhljx又来了(III).c"
        "1~1000/264 MATRIX的查询(二维前缀和).c"
        "1~1000/265 Kevin_Feng挤地铁(栈).c"
        "1~1000/266 AZY学习顺序表vector.cpp"
        "1~1000/267 大魔术师.c"
        "1~1000/268 AZY与魔塔.c"
        "1~1000/269 jhljx又来了(I).c"
        "1~1000/27 Collatz Conjecture.c"
        "1~1000/270 AZY的羽毛球教程.c"
        "1~1000/271 Kevin_Feng挤地铁(队列).c"
        "1~1000/272 AZY的交换数字.c"
        "1~1000/273 AZY的成绩统计.c"
        "1~1000/274 jhljx准备面试.c"
        "1~1000/275 Disappeared.c"
        "1~1000/276 大预言家 牛顿迭代.c"
        "1~1000/276 大预言家.c"
        "1~1000/277 Z君的寒假之报数 I.c"
        "1~1000/279 Z君的日常之集合处理.cpp"
        "1~1000/28 pluperfect digital invariant.c"
        "1~1000/280 Kevin_Feng玩炉石.c"
        "1~1000/281 Z君的日常之奇怪的函数.c"
        "1~1000/282 AZY的生化危机.c"
        "1~1000/283 赌神AZY 下标模拟链表.c"
        "1~1000/284 AZY的冒险岛.c"
        "1~1000/29 A+Bi Problem.c"
        "1~1000/290 Kevin_Feng写作文.cpp"
        "1~1000/291 鸡蛋的小小愿望.c"
        "1~1000/293 AZY的白色情人节.c"
        "1~1000/294 Arthur的收藏夹.c"
        "1~1000/295 Thor’s Necklace.c"
        "1~1000/296 Z君的日常之海绵宝宝.c"
        "1~1000/297 AZY吃早餐.c"
        "1~1000/298 AZY的歌单.c"
        "1~1000/299 AZY's Stack Test.c"
        "1~1000/3 test 发糖.c"
        "1~1000/30 水水的的分数相加.c"
        "1~1000/300 反方向的钟.c"
        "1~1000/301 魔王与你相约I.cpp"
        "1~1000/302 拉赫玛尼诺夫第三钢琴协奏曲.c"
        "1~1000/303 表达式求值.c"
        "1~1000/304 AZY的汉诺塔.c"
        "1~1000/309 数头顶.c"
        "1~1000/31 神奇的桌子.c"
        "1~1000/310 愚人节的礼物.c"
        "1~1000/311 搬运工的苦差事.c"
        "1~1000/312 AZY and Pascal's Triangle.c"
        "1~1000/313 礼物.c"
        "1~1000/314 毛毛虫.cpp"
        "1~1000/315 滚动的窗口.cpp"
        "1~1000/316 Team Queue of microhhh.c"
        "1~1000/319 microhhh的字符串综合训练3.c"
        "1~1000/32 cool_breeze的袜子.c"
        "1~1000/320 microhhh的字符串综合训练2.c"
        "1~1000/321 microhhh的字符串综合训练1string.cpp"
        "1~1000/322 AZY的消失.c"
        "1~1000/323 microhhh的字符串综合训练4.c"
        "1~1000/324 jhljx准备面试(II).c"
        "1~1000/325 microhhh的签到题.c"
        "1~1000/326 IPv4.c"
        "1~1000/327 蝶恋花.c"
        "1~1000/328 玉楼春.c"
        "1~1000/329 胡须 Link-Cut-Tree动态维护.c"
        "1~1000/329 胡须 树状数组 树链剖分.c"
        "1~1000/33 感受学长的爱意吧（雾）.c"
        "1~1000/330 这是一棵树？.c"
        "1~1000/331 二叉树的三围.c"
        "1~1000/332 等级体系.c"
        "1~1000/333 念奴娇.c"
        "1~1000/334 Coolest AZY.cpp"
        "1~1000/335 AZY's Reversal.c"
        "1~1000/336 Kevin_Feng的WPL.c"
        "1~1000/337 二叉排序树的基本操作.c"
        "1~1000/338 树的深度.c"
        "1~1000/339 电报编码.c"
        "1~1000/34 判断三角形.c"
        "1~1000/340 AZY's Xscapesstream.cpp"
        "1~1000/344 拮据的模拟城市.c"
        "1~1000/346 二叉树也玩俄罗斯方块.c"
        "1~1000/347 α星的等级体系（二）.c"
        "1~1000/348 α星的等级体系（三）.c"
        "1~1000/349 α星的等级体系（四） 字符串哈希.c"
        "1~1000/35 活着的数.c"
        "1~1000/350 邻接矩阵转邻接表.c"
        "1~1000/351 microhhh的名字统计.cpp"
        "1~1000/352 Z君搬砖.c"
        "1~1000/353 AZY's Angel.c"
        "1~1000/355 最小生成树.c"
        "1~1000/356 The Last Alpha Star.c"
        "1~1000/357 借教室.c"
        "1~1000/359 传纸条.c"
        "1~1000/36 jhljx水水的签到题.c"
        "1~1000/360 AZY's ink.c"
        "1~1000/361 两个按钮.c"
        "1~1000/362 AZY's toys.c"
        "1~1000/363 无线网络.c"
        "1~1000/364 barty的智商.c"
        "1~1000/367 简单·AZY's multiplication.c"
        "1~1000/368 AZY's Sum.c"
        "1~1000/369 zxa and split.c"
        "1~1000/37 水水的比较大小.c"
        "1~1000/370 zxa and kids.c"
        "1~1000/371 zxa and UAV.c"
        "1~1000/372 zxa and tree.c"
        "1~1000/373 zxa and path.c"
        "1~1000/374 zxa and xor 更快+支持多二进制位的线段树做法.c"
        "1~1000/375 zxa and robot.c"
        "1~1000/376 zxa and array.c"
        "1~1000/377 zxa and jing'a.c"
        "1~1000/378 中等·大独裁者.c"
        "1~1000/379 中等题-不同数字的个数 离线+树状数组.cpp"
        "1~1000/380 月落乌啼霜满天.c"
        "1~1000/381 不忍挂掉一大片find.cpp"
        "1~1000/382 中世界的Thor 倍增LCA+非严格次小生成树.c"
        "1~1000/382 中世界的Thor.c"
        "1~1000/383 简单-环dfs.c"
        "1~1000/383 简单-环拓扑排序.c"
        "1~1000/384 中等题-图的直径.c"
        "1~1000/385 简单-jhljx的情怀.c"
        "1~1000/386 简单-AZY的二叉树遍历.cpp"
        "1~1000/387 中等-Monotonic Stack.c"
        "1~1000/388 中等-王po买瓜.cpp"
        "1~1000/389 难题-AZY做志愿者.c"
        "1~1000/390 难题-拓扑排序assign.cpp"
        "1~1000/391 数字游戏（Game）.c"
        "1~1000/392 加工调度（Prod）.c"
        "1~1000/393 捷径（Shortcut）sort.cpp"
        "1~1000/394 旅行（Travel）.c"
        "1~1000/395 神秘岛（Road）.c"
        "1~1000/396 Hello BUAA_SOFT! by ModricWang.c"
        "1~1000/397 来算a+b吧！.c"
        "1~1000/398 师恩难忘.c"
        "1~1000/399 试试AB问题吧！.c"
        "1~1000/4 Kevin·Feng的正确@姿势.c"
        "1~1000/40 零崎的战争.c"
        "1~1000/400 整数除法.c"
        "1~1000/402 不坑的(AB)%p by ModricWang.c"
        "1~1000/404 数星星 枚举 全排列.c"
        "1~1000/408 jhljx玩游戏.c"
        "1~1000/409 jhljx讲Excel(I).c"
        "1~1000/412 jhljx讲Excel(II).c"
        "1~1000/413 三角形支架.c"
        "1~1000/416 科技实践部分组.c"
        "1~1000/417 自习室之神.c"
        "1~1000/42 不要不要丧心病狂.c"
        "1~1000/420 jhljx的最长零子数组.cpp"
        "1~1000/421 jhljx数组变变变.c"
        "1~1000/424 jhljx上大学学数学.c"
        "1~1000/43 且听风吟之呆逼二三事.c"
        "1~1000/437 多项式计算器.c"
        "1~1000/439 小山坡.c"
        "1~1000/44 jhljx学函数.c"
        "1~1000/440 重力加速度.c"
        "1~1000/444 股票交易.c"
        "1~1000/445 模式寻对.c"
        "1~1000/446 王助教玩逢七必过.c"
        "1~1000/448 jhljx学位运算.c"
        "1~1000/449 怠惰的园丁王木木.c"
        "1~1000/45 浮点回文数.c"
        "1~1000/450 取出十位数.c"
        "1~1000/451 究极汉诺塔.c"
        "1~1000/452 四合归零.c"
        "1~1000/453 王助教坐地铁.c"
        "1~1000/455 王助教猜数字.c"
        "1~1000/456 DH学分数 gcd应用.c"
        "1~1000/457 小罗的虚拟内存大作战 线段树.c"
        "1~1000/458 xjx的晚会舞伴.c"
        "1~1000/459 51是无辜的吗.c"
        "1~1000/46 李逍遥的仙剑客栈.c"
        "1~1000/460 数论の初见.c"
        "1~1000/461 jhljx水水的最短路径.c"
        "1~1000/464 ModricWang的数据位校验.c"
        "1~1000/466 我有特殊的快排技巧.c"
        "1~1000/467 阴影即吾盾.c"
        "1~1000/468 模式寻数.cpp"
        "1~1000/47 不要不要数列求和.c"
        "1~1000/472 Magry's Prime Min25筛.c"
        "1~1000/472 Magry's Prime 去掉偶数的埃氏筛法.c"
        "1~1000/473 王助教活了多久.c"
        "1~1000/474 Magry的朋友很多 - 零食篇.c"
        "1~1000/475 济世之光.c"
        "1~1000/48 初见杀.c"
        "1~1000/487 王助教的点数计算.c"
        "1~1000/49 最小公倍数.c"
        "1~1000/490 王助教避四.c"
        "1~1000/492 Longest Common Subsequence.cpp"
        "1~1000/493 I have a tree.c"
        "1~1000/494 Magry的强迫症 多重dp.c"
        "1~1000/495 Nintendo Switch生产车间.c"
        "1~1000/496 身可死，武士之名不可弃.c"
        "1~1000/497 Magry猎奇的省钱策略.c"
        "1~1000/498 王助教凑单买柠檬茶.c"
        "1~1000/499 jj试穿巫女服 汉诺塔变种 汉诺塔字典序.c"
        "1~1000/5 加法加法.c"
        "1~1000/50 零崎的补番计划Ⅰ.c"
        "1~1000/501 ModricWang寻宝.c"
        "1~1000/506 怠惰的王木木Ⅱ 贪心 坑.c"
        "1~1000/507 可得长生否 记忆化搜索.c"
        "1~1000/508 在下废灵根 dp.c"
        "1~1000/508 在下废灵根 贪心.c"
        "1~1000/509 Magry的朋友很多 - Wonderland的邀请篇 贪心.c"
        "1~1000/51 零崎的补番计划Ⅱ.c"
        "1~1000/510 王助教喝柠檬茶.c"
        "1~1000/511 王助教凑七对子.cpp"
        "1~1000/512 机器人装配 流水线dp.c"
        "1~1000/516 ModricWang的星灵棋.cpp"
        "1~1000/517 Magry的烦恼 01背包的精巧应用.c"
        "1~1000/52 零崎的补番计划Ⅲ.c"
        "1~1000/526 Magry的幸运度 贪心.c"
        "1~1000/527 DH分组员 贪心.c"
        "1~1000/53 最小非负值.c"
        "1~1000/530 王助教掷骰子.c"
        "1~1000/531 崔哥的信仰.c"
        "1~1000/532 点与多边形.c"
        "1~1000/535 一尺之棰.c"
        "1~1000/538 混乱的辈分关系 图论.cpp"
        "1~1000/54 Ryan's ISBN.c"
        "1~1000/55 N种方式待不下去错位排列.c"
        "1~1000/558 ModricWang解方程.c"
        "1~1000/56 “伪”积分.c"
        "1~1000/560 王助教画div.c"
        "1~1000/565 无法停止的计数 摊还分析 位运算.c"
        "1~1000/566 密码安全 单调栈.c"
        "1~1000/57 jhljx上大学.c"
        "1~1000/570 二营长,你他娘的意大利炮呢 二分图最大匹配模板 匈牙利算法.c"
        "1~1000/571 赢了这局我就睡觉.c"
        "1~1000/572 简单的贪心 贪心经典 过河问题.c"
        "1~1000/574 空间旅行unordered_map.cpp"
        "1~1000/580 圆圆的物理实验.c"
        "1~1000/583 王助教查看内存.c"
        "1~1000/584 王助教理牌.c"
        "1~1000/587 浪哥的烦恼.c"
        "1~1000/592 裁纸片.c"
        "1~1000/594 Magry的微信鼓励金.c"
        "1~1000/598 王助教填数独.c"
        "1~1000/6 三位数反转.c"
        "1~1000/600 ModricWang’s HASH.c"
        "1~1000/602 加法运算.c"
        "1~1000/603 火柴棍摆数字string.cpp"
        "1~1000/606 王助教又填数独.c"
        "1~1000/607 Magry再度出山 最近最远点对.cpp"
        "1~1000/609 最小内积.c"
        "1~1000/610 前前前世.c"
        "1~1000/615 王助教改首字母大写.c"
        "1~1000/616 ModricWang的空间折跃 最长上升子序列 二分 DP.c"
        "1~1000/617 大魔法师 完全背包.c"
        "1~1000/618 王助教读取内存.c"
        "1~1000/620 数论の重逢 EXCRT.c"
        "1~1000/620 数论の重逢 中国剩余定理.c"
        "1~1000/621 怠惰的王木木Ⅲ 凸包模板.c"
        "1~1000/623 NAIVE排序 nth_element.cpp"
        "1~1000/625 ModricWang的满天繁星.c"
        "1~1000/635 王助教复制字节.c"
        "1~1000/639 王助教改英文缩写.c"
        "1~1000/64 说好的ALS呢？.c"
        "1~1000/640 两点之间.c"
        "1~1000/645 ModricWang练技能.c"
        "1~1000/646 ModricWang买内存.c"
        "1~1000/65 挑战神奇宝贝联盟.c"
        "1~1000/651 我知道你不知道圣诞节做什么.c"
        "1~1000/653 圣诞礼物圈地计划.c"
        "1~1000/654 圣诞礼物是要转半圈滴.c"
        "1~1000/655 ModricWang与Cantor表.c"
        "1~1000/656 ModricWang创造世界.c"
        "1~1000/657 Joshua的炉石幻想.c"
        "1~1000/658 KZQ的幻想乡大冒险 (1) 斐波那契数列变种.c"
        "1~1000/66 日期计算.c"
        "1~1000/660 圣诞老人买礼物.c"
        "1~1000/661 王助教大炼钢铁sstream.c"
        "1~1000/662 圣诞老人分礼物.c"
        "1~1000/664 终于要打开礼物啦.c"
        "1~1000/665 圣诞大礼包.c"
        "1~1000/666 圣诞小游戏.c"
        "1~1000/667 圣诞糖果.c"
        "1~1000/668 钢管拼接.c"
        "1~1000/669 简单·梦想始发车 nth_element.cpp"
        "1~1000/67 N航母问题.c"
        "1~1000/670 难题·圣杯之战·最终章 二分图 最小割最大流.cpp"
        "1~1000/672 简单·最大公约数.c"
        "1~1000/673 中等·跑得快的王木木 贪心.c"
        "1~1000/674 中等·Magry恼人的词典编辑 快读模板 归并排序.c"
        "1~1000/675 简单·多项式计算器Ⅱ 霍纳法则.c"
        "1~1000/677 难题·序列划分 二分答案.c"
        "1~1000/679 Magry摆什锦糖 DP 01背包 中等.c"
        "1~1000/68 Double Date.c"
        "1~1000/680 难题·大独裁者的以后 稳定凸包.c"
        "1~1000/681 中等·Magry摆什锦糖 DP 01背包 679简化版.c"
        "1~1000/682 王助教排名次.c"
        "1~1000/688 王助教开修改器.c"
        "1~1000/69 jhljx跑一千米.c"
        "1~1000/691 ModricWang与LotV.c"
        "1~1000/692 ModricWang与自由之翼.c"
        "1~1000/693 Gzh又去上自习.c"
        "1~1000/697 Mdd来排队.c"
        "1~1000/698 巧克力游戏.c"
        "1~1000/699 Mdd的swap函数.c"
        "1~1000/7 Last_Day's dog.c"
        "1~1000/70 microhhh的困境.c"
        "1~1000/700 ModricWang的下午茶.cpp"
        "1~1000/701 DH的矩阵游戏.c"
        "1~1000/703 Mdd的链表.c"
        "1~1000/704 ModricWang的文本排版.cpp"
        "1~1000/705 Gzh最后一次上自习.c"
        "1~1000/706 DH的新手机.c"
        "1~1000/708 Mdd的链表(II).c"
        "1~1000/709 Mdd玩炉石.c"
        "1~1000/71 Ryan's Confusing Words.c"
        "1~1000/711 DH的杀人游戏.c"
        "1~1000/712 ModricWang’s JOSEPHUS Problem II.c"
        "1~1000/713 Gzh之女篮风云.c"
        "1~1000/714 ModricWang’s JOSEPHUS Problem.c"
        "1~1000/715 DH的新手机Ⅱ.c"
        "1~1000/716 Mdd的异世界.c"
        "1~1000/717 Mdd来排队(II).c"
        "1~1000/718 Gzh之返老还童.c"
        "1~1000/719 ModricWang’s Hanoi Tower（栈）.c"
        "1~1000/72 晴天小猪的羊肉串.c"
        "1~1000/720 ModricWang合并果子.c"
        "1~1000/721 DH的数字序列.c"
        "1~1000/722 Gzh之表达式求值string OPG文法.cpp"
        "1~1000/722 Gzh之表达式求值string 递归下降法.cpp"
        "1~1000/723 Mdd的回文串.c"
        "1~1000/724 括号匹配.c"
        "1~1000/725 Mdd学数学.c"
        "1~1000/726 ModricWang's Marshaling.c"
        "1~1000/727 ModricWang的瑞士轮.c"
        "1~1000/728 DH的回文数.c"
        "1~1000/729 DH的01串.c"
        "1~1000/73 随便玩玩的字符串.c"
        "1~1000/730 Gzh之返老还童II.c"
        "1~1000/731 ModricWang的序列修改.c"
        "1~1000/732 Gzh之软院联谊 稳定婚姻匹配问题 Gale-Shapley算法.c"
        "1~1000/733 Gzh渣基三.c"
        "1~1000/734 Mdd的数字.c"
        "1~1000/735 Gzh的a+b.c"
        "1~1000/736 ModricWang的意大利炮.c"
        "1~1000/737 摄影师ModricWang.c"
        "1~1000/738 杨辉三角.c"
        "1~1000/739 Mdd的小游戏.c"
        "1~1000/74 临近的虚实.c"
        "1~1000/742 DH的字符串游戏string.cpp"
        "1~1000/743 进制转换.c"
        "1~1000/744 Gzh之简单的约瑟夫环.c"
        "1~1000/745 ModricWang的链表.c"
        "1~1000/746 Gzh之返老还童IIIstring.cpp"
        "1~1000/747 欢迎来到士谔书院~.c"
        "1~1000/748 Mdd的完全二叉树.c"
        "1~1000/749 DH的二叉搜索树.c"
        "1~1000/75 恶魔的证明.c"
        "1~1000/750 DH的出行规划map.cpp"
        "1~1000/751 Mdd的二叉树.c"
        "1~1000/752 Gzh的二叉搜索树遍历sstream.cpp"
        "1~1000/753 来一场华丽的学级裁判吧.c"
        "1~1000/758 DH的公司聚会.c"
        "1~1000/76 jhljx学素数.c"
        "1~1000/760 Mdd的二叉搜索树.c"
        "1~1000/761 Mdd的信.c"
        "1~1000/762 Gzh的二叉树.c"
        "1~1000/763 DH去旅行.c"
        "1~1000/764 ModricWang请客吃饭nthelement.cpp"
        "1~1000/765 Ugly Number.c"
        "1~1000/766 ModricWang的新显卡.c"
        "1~1000/767 Mdd的二叉树(II).c"
        "1~1000/768 DH的满k叉树.c"
        "1~1000/769 Gzh的数学游戏.c"
        "1~1000/77 jhljx的强迫症.c"
        "1~1000/770 DH的邮件系统map.cpp"
        "1~1000/771 Mdd的二叉树(III).c"
        "1~1000/777 ModricWang的树.c"
        "1~1000/778 DH的传送带.c"
        "1~1000/78 无法禁止的游戏.c"
        "1~1000/780 Mdd的二叉树(IV).c"
        "1~1000/781 DH的整数魔法.c"
        "1~1000/782 Gzh之图的深度优先遍历set.cpp"
        "1~1000/783 DH滑冰.c"
        "1~1000/784 ModricWang的布线问题.c"
        "1~1000/785 Mdd去旅游.c"
        "1~1000/786 Mdd的excel.c"
        "1~1000/787 DH的礼物.c"
        "1~1000/788 DH的魔法矩阵.c"
        "1~1000/789 Gzh之颜值同化.c"
        "1~1000/79 microhhh的雷达.c"
        "1~1000/790 Gzh之物品分类.c"
        "1~1000/8 creeper学妹的计算题.c"
        "1~1000/80 jhljx的分身术.c"
        "1~1000/81 第二小整数.c"
        "1~1000/810 【2017集训选拔赛】这是个难题.c"
        "1~1000/812 ModricWang的布线问题 II.c"
        "1~1000/813 Mdd去旅游map.cpp"
        "1~1000/814 DH去看球map.cpp"
        "1~1000/815 ModricWang的局域网.c"
        "1~1000/817 Mdd去旅游(II).c"
        "1~1000/820 Mdd的栈(中).c"
        "1~1000/821 DH的注册系统map.cpp"
        "1~1000/822 DH的括号匹配.c"
        "1~1000/824 DH的城市安全rotate.cpp"
        "1~1000/825 ModricWang的星际旅行（中难）.c"
        "1~1000/827 Gzh的最佳损友（中等）.c"
        "1~1000/828 ModricWang的小火球术（简单）.c"
        "1~1000/83 双11就要到啦.c"
        "1~1000/831 付佬的括号匹配 - naive.c"
        "1~1000/834 试试a-b吧！.c"
        "1~1000/835 风吹雨遍山.c"
        "1~1000/836 管理员的大忧伤string.cpp"
        "1~1000/837 管理员的忧伤.c"
        "1~1000/838 小太阳 树的最长链dfs 快读 map.cpp"
        "1~1000/84 jhljx选择狗带.c"
        "1~1000/840 后羿射日 - ver. easy.cpp"
        "1~1000/841 哦~我的女神！.c"
        "1~1000/842 王助教科学和牌.c"
        "1~1000/85 三角形.c"
        "1~1000/852 指（子）针（烝）吃鸡.c"
        "1~1000/853 北京仰望星空大学的飞船.c"
        "1~1000/854 TQ的图像处理.c"
        "1~1000/859 ModricWang解方程（2）.c"
        "1~1000/86 wjh路遇火锅城.c"
        "1~1000/87 Magry遇上了初雪.c"
        "1~1000/875 TQ的山形绘制.c"
        "1~1000/876 QZZ的颜文字.c"
        "1~1000/877 学号识别码.c"
        "1~1000/878 你会向上取整嘛？.c"
        "1~1000/879 李助教的数位翻转.c"
        "1~1000/88 A plus B.c"
        "1~1000/880 N3 + 1 problem.c"
        "1~1000/881 JumbledCommunication.c"
        "1~1000/882 MergeMultiset.c"
        "1~1000/883 RankingSystem.c"
        "1~1000/886 你会写月份的英文吗.c"
        "1~1000/887 单峰五元组.c"
        "1~1000/888 鸡兔同笼.c"
        "1~1000/89 LCS_Data_Enhanced.cpp"
        "1~1000/893 一起来做函数题.c"
        "1~1000/896 成双成对的尾巴.c"
        "1~1000/899 掉坑.c"
        "1~1000/9 零崎的人间冒险Ⅰ.c"
        "1~1000/90 晴天小猪的绕口令to_string.cpp"
        "1~1000/900 又掉坑.c"
        "1~1000/901 m个无空分拆不限金币.c"
        "1~1000/902 互异分拆（奇分拆）.c"
        "1~1000/903 五边形数定理.c"
        "1~1000/909 判断质数.c"
        "1~1000/91 n的最小cp.c"
        "1~1000/910 逆序对统计（naive版）.c"
        "1~1000/913 数位各位之和.c"
        "1~1000/917 完数.c"
        "1~1000/919 TQ有点二 另一种分组.c"
        "1~1000/919 TQ有点二分组.c"
        "1~1000/919 TQ有点二读写优化.c"
        "1~1000/92 jhljx分解质因数.c"
        "1~1000/922 分解重复素因数.c"
        "1~1000/925 凸峰三元组.c"
        "1~1000/927 逆序乘积.c"
        "1~1000/928 翻转数字.c"
        "1~1000/929 一段楼梯有n级，兔子每次可以....c"
        "1~1000/93 伤心的晴天小猪.c"
        "1~1000/931 水仙花数.c"
        "1~1000/934 熊猫序列.c"
        "1~1000/94 双层汉诺塔.c"
        "1~1000/95 异面直线距离.c"
        "1~1000/955 7月12日.c"
        "1~1000/958 浪哥的烦恼2.c"
        "1~1000/96 暗号.c"
        "1~1000/964 三角形的判断.c"
        "1~1000/97 Tiling_easy version.c"
        "1~1000/975 AlvinZH的1021实验.c"
        "1~1000/978 AlvinZH的1021实验plus.c"
        "1~1000/979 Bamboo and the Ancient Spell.c"
        "1~1000/98 第三小整数.c"
        "1~1000/989 御坂御坂.c"
        "1~1000/99 水水的chessboard.c "
        "2001~3000/2355 完全图生成树特殊.c"
        "2001~3000/2356 位运算.c"
        "2001~3000/2368 二叉搜索树的和值 set.cpp"
        "2001~3000/2368 二叉搜索树的和值 VEB树 map.cpp"
        "2001~3000/2368 二叉搜索树的和值 链表预处理.c"
        "2001~3000/2368 二叉搜索树的和值 深度 笛卡尔树.c"
        "2001~3000/2368 二叉搜索树的和值 手写红黑树.cpp"
        "2001~3000/2370 连续子序列的权值单调栈.c"
        "2001~3000/2371 黑暗光明并查集.c"
        "2001~3000/2372 卡塔兰数.c"
        "2001~3000/2374 多多岛.c"
        "2001~3000/2376 魔法阵弗洛伊德.c"
        "2001~3000/2377 小面包.c"
        "2001~3000/2386 最小生成树并查集.c"
        "2001~3000/2425 竞赛相邻分数消失.c"
        "2001~3000/2435 前缀和.c"
        "2001~3000/2436 差分.c"
        "2001~3000/2437 递归.c"
        "2001~3000/2438 分治.c"
        "2001~3000/2439 斐波那契数列.c"
        "2001~3000/2440 等比数列求和.c"
        "2001~3000/2441 妙妙趣排序快版.c"
        "2001~3000/2441 妙妙趣排序慢版.c"
        "2001~3000/2485 逆序数.c"
        "2001~3000/2486 k次折半和最小.c"
        "2001~3000/2487 pair语法正确.c"
        "2001~3000/2488 希尔伯特曲线.c"
        "2001~3000/2489 点灯线段树.c"
        "2001~3000/2491 过河递推.c"
        "2001~3000/2493 毛毛虫.c"
        "2001~3000/2522 排座位不相邻.c"
        "2001~3000/2530 长k子序列最小差之和.c"
        "2001~3000/2531 与非门树形DP.c"
        "2001~3000/2532 钢管切割.c"
        "2001~3000/2533 两边流水线.c"
        "2001~3000/2541 01背包.c"
        "2001~3000/2542 完全背包.c"
        "2001~3000/2543 多重背包队列法.c"
        "2001~3000/2544 组合背包.c"
        "2001~3000/2545 股票一次.c"
        "2001~3000/2546 股票多次.c"
        "2001~3000/2547 股票两次.c"
        "2001~3000/2548 股票k次.c"
        "2001~3000/2552 OBST最优二叉搜索树.c"
        "2001~3000/2560 AlvinZH的小面包(博弈论+区间dp).c"
        "2001~3000/2589 矩阵链乘.c"
        "2001~3000/2590 排座位.c"
        "2001~3000/2591 最长等差数列动态规划.c"
        "2001~3000/2592 最大上升子序列动态规划.c"
        "2001~3000/2596 多流水线动态规划.c"
        "2001~3000/2648 食物链.c"
        "2001~3000/2652 排列.c"
        "2001~3000/2653 最小乘法.c"
        "2001~3000/2654 卖鱼贪心.c"
        "2001~3000/2655 白雪.c"
        "2001~3000/2704 网络流.c"
        "2001~3000/2705 婚车EK.c"
        "2001~3000/2706 魔法少女匈牙利.c"
        "2001~3000/2707 最大匹配匈牙利.c"
        "2001~3000/2709 贪心.c"
        "2001~3000/2740 图1.c"
        "2001~3000/2741 图2floyd.c"
        "2001~3000/2743 图3dinic.c"
        "2001~3000/2759 k关键字排序.c"
        "3001~4000/3014 奇怪的排序 另解.c"
        "3001~4000/3014 奇怪的排序 数组思维操作.c"
        "3001~4000/3014 奇怪的排序 序列操作 Splay set.cpp"
        "3001~4000/3333 monotonicity 尺取法.c"
        "3001~4000/3335 检测数码管.c"
        "3001~4000/3339 填报高考志愿.c"
        "3001~4000/3347 蟠桃大会.c"
        "4001~5000/4120 （中等题）W形串.c"
        "4001~5000/4182 返航小统计（数组）.c"
        "4001~5000/4182 返航小统计（直接输出）.c"
        "4001~5000/4183 女神的生日.c"
        "4001~5000/4184 YourSQL2.0.c"
        "4001~5000/4185 数列级数（循环）.c"
        "4001~5000/4185 数列级数（打表）.c"
        "4001~5000/4187 佛像.c"
        "4001~5000/4188 数数入门.c"
        "4001~5000/4189 阿瓦隆卡牌.c"
        "4001~5000/4190 忍蛙的圆形轨迹.c"
        "4001~5000/4190 忍蛙的圆形轨迹_另一种解法.c"
        "4001~5000/4191 helloworld.c"
        "4001~5000/4192 正反相加.c"
        "4001~5000/4193 真·简单的a+b.c"
        "4001~5000/4194 PHP 是最好的语言.c"
        "4001~5000/4195 cbj学数学分析.c"
        "4001~5000/4196 刀客塔的烦恼.c"
        "4001~5000/4197 单节得分王.c"
        "4001~5000/4198 基础物理实验 2（简单版）（打表）.c"
        "4001~5000/4199 二进制逆序.c"
        "4001~5000/4201 北航欢迎你.c"
        "4001~5000/4202 女神的密码2.c"
        "4001~5000/4203 奇妙的多边形.c"
        "4001~5000/4204 女神的密码.c"
        "4001~5000/4205 小迷弟的迷惑行为.c"
        "4001~5000/4206 女神的考验.c"
        "4001~5000/4207 ONOS大班的班长选举.c"
        "4001~5000/4208 缺项一元三次方程.c"
        "4001~5000/4209 cbj绘图.c"
        "4001~5000/4211 字母频率统计2021.c"
        "4001~5000/4212 找数字 方法1.c"
        "4001~5000/4212 找数字 方法2.c"
        "4001~5000/4213 计算绩点.c"
        "4001~5000/4214 ZJD学GCD.c"
        "4001~5000/4215 漏沙漏.c"
        "4001~5000/4216 简单的分数约分.c"
        "4001~5000/4217 简单方程.c"
        "4001~5000/4218 朵朵的日期计算.c"
        "4001~5000/4220 cbj学数学分析(阶乘).c"
        "4001~5000/4221 复数计算器.c"
        "4001~5000/4222 ssd的变量命名.c"
        "4001~5000/4223 High Heels！.c"
        "4001~5000/4224 朵朵买甜瓜.c"
        "4001~5000/4225 小兔子乖乖拔萝卜.c"
        "4001~5000/4226 9键输入.c"
        "4001~5000/4227 小迷弟坐电梯.c"
        "4001~5000/4228 Wink矩阵运算.c"
        "4001~5000/4229 NBSI码.c"
        "4001~5000/4230 数字反转2021 方法1.c"
        "4001~5000/4230 数字反转2021 方法2.c"
        "4001~5000/4232 一 道 水 题.c"
        "4001~5000/4233 网抑人.c"
        "4001~5000/4234 小迷弟的反向最大公约数.c"
        "4001~5000/4235 水君的价格.c"
        "4001~5000/4236 格雷编码.c"
        "4001~5000/4237 林士谔算法.c"
        "4001~5000/4238 小迷弟帮室友追女神.c"
        "4001~5000/4239 朵朵选靓号.c"
        "4001~5000/4240 小迷弟的灵光一现.c"
        "4001~5000/4241 小迷弟的碎碎念.c"
        "4001~5000/4242 ZYT学“真·位运算”.c"
        "4001~5000/4243 ZJD想当Manager.c"
        "4001~5000/4244 CRC16.c"
        "4001~5000/4245 ZYT学五则运算.c"
        "4001~5000/4246 有理有据的送分.c"
        "4001~5000/4247 简易浮点数.c"
        "4001~5000/4248 木木枭学高中集合论.c"
        "4001~5000/4250 循环移位转圈圈.c"
        "4001~5000/4251 补码相反数.c"
        "4001~5000/4252 小迷弟的破镜重圆.c"
        "4001~5000/4253 GCD Plus.c"
        "4001~5000/4254 cbj学进制转换.c"
        "4001~5000/4256 高低位 方法1.c"
        "4001~5000/4256 高低位 方法2.c"
        "4001~5000/4257 小迷弟积不出分.c"
        "4001~5000/4258 浮点数进阶.c"
        "4001~5000/4259 自动控制原理 方法1.c"
        "4001~5000/4259 自动控制原理 方法2.c"
        "4001~5000/4260 大兔子乖乖拔大萝卜 方法1.c"
        "4001~5000/4260 大兔子乖乖拔大萝卜 方法2.c"
        "4001~5000/4261 晶钻与明珠.c"
        "4001~5000/4262 二荷学姐买基金（续） 方法1.c"
        "4001~5000/4262 二荷学姐买基金（续） 方法2.c"
        "4001~5000/4263 test a xor b.c"
        "4001~5000/4264 Yes OK！.c"
        "4001~5000/4265 二荷学姐买基金.c"
        "4001~5000/4266 切换进制回文数.c"
        "4001~5000/4267 三荷学长买不来基金.c"
        "4001~5000/4268 荷荷学妹赚基金.c"
        "4001~5000/4269 JZD学组合数.c"
        "4001~5000/4270 年 度 好 题.c"
        "4001~5000/4271 不可思议的展开.c"
        "4001~5000/4272 逆 序 对.c"
        "4001~5000/4273 达 拉 崩 吧.c"
        "4001~5000/4275 行变换与行列式.c"
        "4001~5000/4276 小迷弟搞偷袭.c"
        "4001~5000/4277 一荷学弟卖基金.c"
        "4001~5000/4278 cbj加密数据 方法1.c"
        "4001~5000/4278 cbj加密数据 方法2.c"
        "4001~5000/4281 递归括号匹配.c"
        "4001~5000/4282 吃糖.c"
        "4001~5000/4283 四荷学姐买不起基金.c"
        "4001~5000/4284 计数排序.c"
        "4001~5000/4285 五荷一点都不喜欢重复.c"
        "4001~5000/4286 倒三角.c"
        "4001~5000/4287 一天不用switch我浑身难受.c"
        "4001~5000/4288 忍蛙的冠军巅峰.c"
        "4001~5000/4290 cbj统计成绩.c"
        "4001~5000/4291 ssd学不会理力.c"
        "4001~5000/4293 遥不可及的军训.c"
        "4001~5000/4294 荷荷学妹坐地铁.c"
        "4001~5000/4295 有些奇怪的字符画.c"
        "4001~5000/4296 日期指示器.c"
        "4001~5000/4297 大美丽和大凶残.c"
        "4001~5000/4298 荷家军进攻汉诺塔.c"
        "4001~5000/4299 小雷枚举排列数.c"
        "4001~5000/4300 汉诺塔防住了荷家军.c"
        "4001~5000/4301 路西恩梦游课堂.c"
        "4001~5000/4302 开除记者 方法1.c"
        "4001~5000/4302 开除记者 方法2.c"
        "4001~5000/4311 朵朵验证哥德巴赫猜想 方法1.c"
        "4001~5000/4311 朵朵验证哥德巴赫猜想 方法2.c"
        "4001~5000/4313 简单的递归函数~ 方法1.c"
        "4001~5000/4313 简单的递归函数~ 方法2.c"
        "4001~5000/4315 ssd恰自选.c"
        "4001~5000/4316 种田.c"
        "4001~5000/4317 阿水记不住日期.c"
        "4001~5000/4318 逆序输出字符串.c"
        "4001~5000/4323 当DJ大师遇上正方形碟片 方法1.c"
        "4001~5000/4323 当DJ大师遇上正方形碟片 方法2.c"
        "4001~5000/4324 多项式相加2021 方法1.c"
        "4001~5000/4324 多项式相加2021 方法2.c"
        "4001~5000/4328 Ning的汉明距离.c"
        "4001~5000/4329 找出上机大佬 方法1.c"
        "4001~5000/4329 找出上机大佬 方法2.c"
        "4001~5000/4330 PlayFair.c"
        "4001~5000/4331 党的光辉照我心～.c"
        "4001~5000/4332 兔狗贴贴.c"
        "4001~5000/4333 阿水给大家排排坐.c"
        "4001~5000/4334 超级泡泡排序.c"
        "4001~5000/4337 dch做不出毕业设计 方法1.c"
        "4001~5000/4337 dch做不出毕业设计 方法2.c"
        "4001~5000/4338 简易的程序查重.c"
        "4001~5000/4339 ssd做逻辑 方法1.c"
        "4001~5000/4339 ssd做逻辑 方法2.c"
        "4001~5000/4340 大化实验好难啊.c"
        "4001~5000/4344 cbj学数独.c"
        "4001~5000/4347 轰炸.c"
        "4001~5000/4348 给朵朵打电话.c"
        "4001~5000/4349 有点“新意“的签到题？.c"
        "4001~5000/4351 JJ照镜子.c"
        "4001~5000/4355 旗开得胜.c"
        "4001~5000/4357 Dec to 2's complement.c"
        "4001~5000/4358 二荷的二分查找.c"
        "4001~5000/4361 数数入坟 方法1.c"
        "4001~5000/4361 数数入坟 方法2.c"
        "4001~5000/4362 切切切.c"
        "4001~5000/4363 合成大西瓜.c"
        "4001~5000/4364 字符串库函数测试.c"
        "4001~5000/4378 [题目标题敏感] 解析文本为UTF-8码并输出.c"
        "4001~5000/4379 解谜小游戏.c"
        "4001~5000/4380 烧仙草数.c"
        "4001~5000/4381 五月加急名单.c"
        "4001~5000/4382 五点共圆 - 几何结论.c"
        "4001~5000/4382 五点共圆 - 韦达定理.c"
        "4001~5000/4383 String.ReplaceAll().c"
        "4001~5000/4384 简易的人员信息整理.c"
        "4001~5000/4385 合成宝石.c"
        "4001~5000/4386 另类合成.c"
        "4001~5000/4389 旗鼓相当的对手 方法1.c"
        "4001~5000/4389 旗鼓相当的对手 方法2.c"
        "4001~5000/4390 动态链表操作.c"
        "4001~5000/4391 统计成绩（套娃版）.c"
        "4001~5000/4392 出人意料的送分.c"
        "4001~5000/4393 剔除名单.c"
        "4001~5000/4394 井 字 棋 带 师.c"
        "4001~5000/4395 追寻表达式中的真理 栈方法.c"
        "4001~5000/4395 追寻表达式中的真理 爬升法.c"
        "4001~5000/4395 追寻表达式中的真理.c"
        "4001~5000/4401 小迷弟的灵光三现.c"
        "4001~5000/4403 小迷弟的灵光两现.c"
        "4001~5000/4409 名字的奥妙.c"
        "4001~5000/4410 字符串Review.c"
        "4001~5000/4411 qsort签到.c"
        "4001~5000/4412 七巧板入门.c"
        "4001~5000/4413 dch解方程.c"
        "4001~5000/4414 三角形面积·改.c"
        "4001~5000/4416 位 互 换.c"
        "4001~5000/4417 djj的奇怪数列.c"
        "4001~5000/4418 301 Moved Permanently 2021.c"
        "4001~5000/4421 两面包夹芝士 方法1.c"
        "4001~5000/4421 两面包夹芝士 方法2.c"
        "4001~5000/4422 简单的函数求和.c"
        "4001~5000/4423 李白打酒 O(nlogn) multiset.cpp"
        "4001~5000/4423 李白打酒 AVL树 O(nlogn).c"
        "4001~5000/4423 李白打酒.c"
        "4001~5000/4424 李白打酒2.0.c"
        "4001~5000/4425 蒙达鲁克硫斯伯古比奇巴勒城的名册.c"
        "4001~5000/4435 给线段排排序.c"
        "priority_queue/38 优先队列应用.cpp"
        "priority_queue/146 机智零崎不会没梗Ⅱ.cpp"
        "priority_queue/147 皮卡丘！GET！.cpp"
        "priority_queue/253 难题——再见了，大活 链表+可撤回贪心.cpp"
        "priority_queue/341 图的深度遍历.cpp"
        "priority_queue/342 图的广度遍历.cpp"
        "priority_queue/462 jhljx水水的补习班.cpp"
        "priority_queue/463 Magry's Sum I.cpp"
        "priority_queue/471 Magry's Sum II.cpp"
        "priority_queue/476 jhljx水水的卡牌 贪心.cpp"
        "priority_queue/671 简单·简单的贪心 贪心.cpp"
        "priority_queue/937 最优卡组.cpp"
        "priority_queue/1042 角谷定理（伪） bfs.cpp"
        "priority_queue/1512 女娲加农炮.cpp"
        "priority_queue/1519 女娲加农炮II.cpp"
        "priority_queue/2369 电影院.cpp"
        "priority_queue/2375 生日宴会.cpp"
        "priority_queue/2553 浩瀚星辰.cpp"
        "priority_queue/Dijkstra/343 最短路径问题.cpp"
        "priority_queue/Dijkstra/345 行者无疆.cpp"
        "priority_queue/Dijkstra/358 Bessie Come Home.cpp"
        "priority_queue/Dijkstra/365 迷宫里有一只薛定谔的猫.cpp"
        "priority_queue/Dijkstra/569 Magry遇上了初雪第三弹 最大流模板.cpp"
        "priority_queue/Dijkstra/585 自带究极坑属性任务之节点连接 最大流 当边权出现0的情况.cpp"
        "priority_queue/Dijkstra/816 DH的魔法光束.cpp"
        "priority_queue/Dijkstra/916 不想掉坑.cpp"
        "priority_queue/Dijkstra/2378 治安点.cpp"
        "priority_queue/Dijkstra/2647 非负权单源最短路.cpp"
        "FFT-complex/1134 简单ab complex.c"
        "FFT-complex/1134 简单ab.c"
        "FFT-complex/1415 石头剪子布 FFT 模式串匹配 complex.c"
        "FFT-complex/1415 石头剪子布.c"
        "FFT-complex/1440 雨桐学姐做乘法 complex.c"
        "FFT-complex/1503 lx学长做乘法 complex.c"
        "FFT-complex/1503 lx学长做乘法.c"
        "FFT-complex/240 FFT教你做乘法 complex.c"
        "FFT-complex/240 FFT教你做乘法.c"
        "FFT-complex/401 巨坑的(AB)%p (有毒慎入) by ModricWang complex.c"
        "FFT-complex/401 巨坑的(AB)%p (有毒慎入) by ModricWang.c"
        "FFT-complex/41 大整数相乘 complex.c"
        "FFT-complex/41 大整数相乘.c"
        "FFT-complex/619 老哥，稳！ FFT complex.c"
        "FFT-complex/629 模式寻数 II 多项式FFT complex.c"
        "unique/14 Inverse number：Reborn离散化树状数组求逆序对.cpp"
        "unique/379 中等题-不同数字的个数 离线+莫队.cpp"
        "unique/445 模式寻对 二次莫队.cpp"
        "unique/445 模式寻对 莫队.cpp"
        "unique/1511 天秤的烦恼.cpp"
        "unique/3965 （简单题）小鱼比可爱 树状数组 离散化去重.cpp"
        "bound-bsearch/121 相位转移.cpp"
        "bound-bsearch/121 相位转移bsearch.c"
        "bound-bsearch/188 收徒.cpp"
        "bound-bsearch/204 就是这么巧bsearch.c"
        "bound-bsearch/204 就是这么巧.cpp"
        "bound-bsearch/251 简单题——I wanna be the 升级者Ⅱ.cpp"
        "bound-bsearch/39 简单的二分法bsearch.c"
        "bound-bsearch/454 DH摆三角 动态规划.cpp"
        "bound-bsearch/529 大家一起来排队.cpp"
        "bound-bsearch/564 王助教的调色盘.cpp"
        "bound-bsearch/696 Mdd的成绩单bsearch.c"
        "bound-bsearch/759 Gzh的射击游戏.cpp"
        "bound-bsearch/2953 真二分查找bsearch.c"
        "bound-bsearch/2958 二分查找PLUSbsearch.c"
        "bound-bsearch/3333 monotonicity 最短满足和的连续子序列.cpp"
        "bound-bsearch/4289 小迷弟磕cpbsearch.c"
        "bound-bsearch/4335 惹Shy的二分查找bsearch.c"
        "bound-bsearch/4419 k-排列 方法2.c"
        "bound-bsearch/upper/226 简单的质数(简单)高度优化的埃氏筛法+上界二分查找.c"
        "bound-bsearch/upper/472 Magry's Prime 高度优化的埃氏筛法+上界二分查找.c"
        "bound-bsearch/upper/652 ModricWang拦截导弹 最长不上升子序列.c"
        "bound-bsearch/upper/1650 摸鱼助教MoggⅠ.c"
        "bound-bsearch/upper/2708 E3-计网的烦恼.cpp"
        "bound-bsearch/upper/2994 紧急救援 上界二分查找.c"
        "bound-bsearch/upper/3339 填报高考志愿 排序 下界二分查找.c"
        "bound-bsearch/upper/3832 斐波那契 高精度.cpp"
        "bound-bsearch/upper/4168 Longest Increasing Subsequence in a matrix - Easy LIS变种.cpp"
        "bound-bsearch/upper/4172 Longest Increasing Subsequence in a matrix - Hard.cpp"
        "bound-bsearch/upper/4419 k-排列 方法1.c"
        "bound-bsearch/others/447 jhljx的GC处理.c"
        "bound-bsearch/others/823 Mdd玩积木(中难).c"
        "bitset/1030 统计质数 Min25筛.cpp"
        "bitset/1030 统计质数 洲阁筛.cpp"
        "bitset/226 简单的质数(简单)Meissel_Lehmer+记忆化搜索.cpp"
        "bitset/472 Magry's Prime Meissel Lehmer+记忆化搜索.cpp"
        "bitset/960 校赛签到.cpp")
